helm/service-api/default-deny-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: frontend
  name: default-deny
spec:
  podSelector:
    matchLabels: {}
